--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/btnLoginNav"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/nav_login_button"
                 android:textColor="@android:color/white"
                 android:background="?attr/selectableItemBackground"
                 android:layout_gravity="end"
