--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#4CAF50</color>
-    <color name="colorPrimaryVariant">#388E3C</color>
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorSecondary">#FFC107</color>
     <color name="colorTextPrimary">#212121</color>
     <color name="colorTextSecondary">#757575</color>
     <color name="colorBackground">#F5F5F5</color>
+    <color name="colorFacebook">#1877F2</color>
+    <color name="colorGoogle">#DB4437</color>
+    <color name="colorGrayLight">#E0E0E0</color>
 </resources>
