--- a/app/src/main/res/drawable/ic_facebook.xml
+++ b/app/src/main/res/drawable/ic_facebook.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M19,4H5C4.45,4 4,4.45 4,5v14c0,0.55 0.45,1 1,1h7.5v-6.5h-2.1v-2.7h2.1V8.9c0,-2.1 1.3,-3.3 3.2,-3.3c0.9,0 1.7,0.1 1.9,0.1v2.2h-1.3c-1,0 -1.2,0.5 -1.2,1.2v1.6h2.5l-0.3,2.7h-2.2V20H19c0.55,0 1,-0.45 1,-1V5C20,4.45 19.55,4 19,4z"/>
+        android:fillColor="#1877F2"
+        android:pathData="M24,12.073c0,-6.627 -5.373,-12 -12,-12s-12,5.373 -12,12c0,5.99,4.388,10.954,10.125,11.854v-8.385H7.078v-3.47h3.047V9.43c0,-3.007,1.792,-4.669,4.533,-4.669c1.312,0,2.686,0.235,2.686,0.235v2.953H15.83c-1.491,0 -1.956,0.925 -1.956,1.874v2.25h3.328l-0.532,3.47h-2.796v8.385C19.612,23.027,24,18.062,24,12.073z"/>
 </vector>
