--- a/app/src/main/res/drawable/ic_google.xml
+++ b/app/src/main/res/drawable/ic_google.xml
@@ -4,6 +4,15 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M21.35,11.1H12v3.8h5.6c-0.5,2.1 -2.4,3.5 -4.6,3.5c-2.9,0 -5.3,-2.3 -5.3,-5.3s2.3,-5.3 5.3,-5.3c1.3,0 2.5,0.5 3.4,1.3l2.7,-2.7C17.5,4.9 14.9,4 12,4C7.6,4 4,7.6 4,12s3.6,8 8,8c4.6,0 8.3,-3.3 8.3,-8C20.3,11.6 20.3,11.4 21.35,11.1z"/>
+        android:fillColor="#4285F4"
+        android:pathData="M22.56,12.25c0,-0.78 -0.07,-1.53 -0.2,-2.25H12v4.26h5.92c-0.26,1.37 -1.04,2.53 -2.21,3.31v2.77h3.57c2.08,-1.92 3.28,-4.74 3.28,-8.09z" />
+    <path
+        android:fillColor="#34A853"
+        android:pathData="M12,23c2.97,0 5.46,-0.98 7.28,-2.66l-3.57,-2.77c-0.98,0.66 -2.23,1.06 -3.71,1.06c-2.86,0 -5.29,-1.93 -6.16,-4.53H2.18v2.84C3.99,20.53 7.7,23 12,23z" />
+    <path
+        android:fillColor="#FBBC05"
+        android:pathData="M5.84,14.09c-0.22,-0.66 -0.35,-1.36 -0.35,-2.09s0.13,-1.43 0.35,-2.09V7.07H2.18C1.43,8.55 1,10.22 1,12s0.43,3.45 1.18,4.93l2.85,-2.22.81,-0.62z" />
+    <path
+        android:fillColor="#EA4335"
+        android:pathData="M12,5.38c1.62,0 3.06,0.56 4.21,1.64l3.15,-3.15C17.45,2.09 14.97,1 12,1 7.7,1 3.99,3.47 2.18,7.07l3.66,2.84c0.87,-2.6 3.3,-4.53 6.16,-4.53z" />
 </vector>
