--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -25,7 +25,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/cardLogin"
-            app:layout_constraintVertical_chainStyle="packed">
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:ignore="UseCompoundDrawables">
             
              <TextView
                 android:id="@+id/tvAppTitle"
@@ -43,7 +44,8 @@
                 android:layout_height="50dp"
                 android:src="@drawable/ic_shopping_bag"
                 app:tint="@color/white"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="16dp"
+                android:contentDescription="@null"/>
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
@@ -98,7 +100,7 @@
                     app:boxCornerRadiusTopEnd="12dp"
                     app:boxCornerRadiusBottomStart="12dp"
                     app:boxCornerRadiusBottomEnd="12dp"
-                    app:startIconDrawable="@android:drawable/ic_dialog_email"
+                    app:startIconDrawable="@drawable/ic_email"
                     app:startIconTint="@color/colorPrimary"
                     app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle">
 
@@ -124,7 +126,7 @@
                     app:boxCornerRadiusTopEnd="12dp"
                     app:boxCornerRadiusBottomStart="12dp"
                     app:boxCornerRadiusBottomEnd="12dp"
-                    app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
+                    app:startIconDrawable="@drawable/ic_lock"
                     app:startIconTint="@color/colorPrimary"
                     app:layout_constraintTop_toBottomOf="@id/tilEmail">
 
@@ -203,12 +205,19 @@
                         android:layout_height="50dp"
                         android:layout_weight="1"
                         android:text="@string/btn_google"
-                        android:textColor="@color/white"
-                        android:backgroundTint="@color/colorGoogle"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="12sp"
+                        android:lines="1"
+                        android:backgroundTint="@color/white"
+                        android:insetLeft="0dp"
+                        android:insetRight="0dp"
                         app:cornerRadius="10dp"
+                        app:strokeWidth="1dp"
+                        app:strokeColor="@color/black"
                         app:icon="@drawable/ic_google"
                         app:iconGravity="textStart"
-                        app:iconTint="@color/white"
+                        app:iconTint="@null"
+                        app:iconPadding="5dp"
                         android:layout_marginEnd="6dp"/>
 
                     <com.google.android.material.button.MaterialButton
@@ -217,12 +226,19 @@
                         android:layout_height="50dp"
                         android:layout_weight="1"
                         android:text="@string/btn_facebook"
-                        android:textColor="@color/white"
-                        android:backgroundTint="@color/colorFacebook"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="12sp"
+                        android:lines="1"
+                        android:backgroundTint="@color/white"
+                        android:insetLeft="0dp"
+                        android:insetRight="0dp"
                         app:cornerRadius="10dp"
+                        app:strokeWidth="1dp"
+                        app:strokeColor="@color/black"
                         app:icon="@drawable/ic_facebook"
                         app:iconGravity="textStart"
-                        app:iconTint="@color/white"
+                        app:iconTint="@null"
+                        app:iconPadding="5dp"
                         android:layout_marginStart="6dp"/>
                 </LinearLayout>
 
